# congressionalappchallenge

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  firestore.rules  hobo_view  package-lock.json  package.json  shelter_view  turbo.json
apps/api/: alembic.ini  env.example  init.sql  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  database.py  main.py
apps/api/app/api/: alerts.py  auth.py  push.py  resources.py  shelters.py  staff.py
apps/api/app/models/: __init__.py  hold.py  resource.py  shelter.py  staff.py  status_change.py  translation.py
apps/api/app/schemas/: __init__.py  common.py  resource.py  shelter.py  staff.py
apps/api/app/services/: availability.py  email.py  geo.py
apps/api/scripts/: seed_data.py
apps/mobile/: app.json  env.example  package.json
apps/staff/: env.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
data/: processed_shelters.json  winter_shelters.json
scripts/: etl_winter.mjs  test_etl.mjs
server/: server.js
web/: admin.html  public.html
